[tool.poetry]
name = "pynput macos issues"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pynput = "^1.7.6"
PySide6 = "^6.4.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
